chore: adjust domain and swagger project
